[package]
name = "passenger"
license = "MIT"
description = "collection of queues"
version = "0.1.0"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]
repository = "https://github.com/rozaliev/passenger"

exclude       = [
  ".gitignore",
  ".travis.yml",
  "bench/**/*",
]

[dependencies]

[[bench]]

name = "bench"
path = "bench/bench.rs"
