[package]
name = "passenger"
license = "MIT"
description = "collection of queues"
version = "0.1.1"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]
repository = "https://github.com/rozaliev/passenger"

exclude       = [
  ".gitignore",
  ".travis.yml",
  ".criterion",
  "benches.sh",
  "src/bin/**/*"
]


[features]
default = []
benchmark = ["criterion"]

[dependencies.criterion]
git = "https://github.com/japaric/criterion.rs.git"
optional = true
